# cmakebasics

./: README.md
consumer/: CMakeLists.txt  main.cpp
